--- a/pom.xml
+++ b/pom.xml
@@ -7,26 +7,11 @@
     <packaging>pom</packaging>
     <name>${project.artifactId}</name>
     <description>A pom for scala projects</description>
-    <inceptionYear>2009</inceptionYear>
-
-    <scm>
-        <connection>scm:git:ssh://github.com/quynguyen/${artificatId}.git</connection>
-        <developerConnection>scm:git:ssh://git@github.com/quynguyen/${artifactId}.git</developerConnection>
-        <url>https://github.com/quynguyen/${artifactId}</url>
-    </scm>
-
-    <distributionManagement>
-        <repository>
-            <id>repo</id>
-            <uniqueVersion>false</uniqueVersion>
-            <url>svn:https://whileloop-m2-repo.googlecode.com/svn/trunk/releases</url>
-        </repository>
-        <snapshotRepository>
-            <id>snapshot-repo</id>
-            <uniqueVersion>false</uniqueVersion>
-            <url>svn:https://whileloop-m2-repo.googlecode.com/svn/trunk/snapshots</url>
-        </snapshotRepository>
-    </distributionManagement>
+    <parent>
+        <groupId>ca.whileloop</groupId>
+        <artifactId>scm-pom</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+    </parent>
 
     <properties>
         <maven.compiler.source>1.5</maven.compiler.source>
@@ -36,12 +21,6 @@
     </properties>
 
     <repositories>
-        <repository>
-            <id>maven2-repository.dev.java.net</id>
-            <name>Java.net Repository for Maven</name>
-            <url>http://download.java.net/maven/2/</url>
-        </repository>
-
         <repository>
             <id>scala-tools.org</id>
             <name>Scala-Tools Maven2 Repository</name>
@@ -85,14 +64,6 @@
     </dependencies>
 
     <build>
-        <extensions>
-            <extension>
-                <groupId>org.jvnet.wagon-svn</groupId>
-                <artifactId>wagon-svn</artifactId>
-                <version>1.8</version>
-            </extension>
-        </extensions>
-
         <pluginManagement>
             <plugins>
                 <plugin>
