--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>ca.whileloop</groupId>
     <artifactId>scala-pom</artifactId>
-    <version>2.8.1-SNAPSHOT</version>
+    <version>2.9.0.RC1-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>${project.artifactId}</name>
     <description>A pom for scala projects.</description>
@@ -17,7 +17,8 @@
         <maven.compiler.source>1.5</maven.compiler.source>
         <maven.compiler.target>1.5</maven.compiler.target>
         <encoding>UTF-8</encoding>
-        <scala.version>2.8.1</scala.version>
+        <scala.version>2.9.0.RC1</scala.version>
+        <specs.version>2.8.1</specs.version>
     </properties>
 
     <repositories>
@@ -51,7 +52,7 @@
         </dependency>
         <dependency>
             <groupId>org.scala-tools.testing</groupId>
-            <artifactId>specs_${scala.version}</artifactId>
+            <artifactId>specs_${specs.version}</artifactId>
             <version>1.6.7.2</version>
             <scope>test</scope>
         </dependency>
