--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,11 @@
         <version>1.0.1</version>
     </parent>
 
+    <scm>
+        <connection>scm:git:ssh://github.com/quynguyen/${artifactId}.git</connection>
+        <developerConnection>scm:git:ssh://git@github.com/quynguyen/${artifactId}.git</developerConnection>
+    </scm>
+
     <properties>
         <maven.compiler.source>1.5</maven.compiler.source>
         <maven.compiler.target>1.5</maven.compiler.target>
