--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>ca.whileloop</groupId>
     <artifactId>scala-pom</artifactId>
-    <version>2.8.1</version>
+    <version>2.8.2-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>${project.artifactId}</name>
     <description>A pom for scala projects.</description>
@@ -12,6 +12,11 @@
         <artifactId>scm-pom</artifactId>
         <version>1.0.1</version>
     </parent>
+
+    <scm>
+        <connection>scm:git:ssh://github.com/quynguyen/${artifactId}.git</connection>
+        <developerConnection>scm:git:ssh://git@github.com/quynguyen/${artifactId}.git</developerConnection>
+    </scm>
 
     <properties>
         <maven.compiler.source>1.5</maven.compiler.source>
