--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,19 @@
             <name>Scala-Tools Maven2 Repository</name>
             <url>http://scala-tools.org/repo-releases</url>
         </repository>
+        <repository>
+            <id>maven2-repository.dev.java.net</id>
+            <name>Java.net Repository for Maven</name>
+            <url>http://download.java.net/maven/2/</url>
+        </repository>
+        <repository>
+            <id>whileloop-snapshots</id>
+            <url>https://whileloop-m2-repo.googlecode.com/svn/trunk/snapshots</url>
+        </repository>
+        <repository>
+            <id>whileloop-releases</id>
+            <url>https://whileloop-m2-repo.googlecode.com/svn/trunk/releases</url>
+        </repository>
     </repositories>
 
     <pluginRepositories>
