--- a/pom.xml
+++ b/pom.xml
@@ -12,21 +12,28 @@
         <artifactId>scm-pom</artifactId>
         <version>1.0.1</version>
     </parent>
-
     <scm>
         <connection>scm:git:ssh://github.com/quynguyen/${artifactId}.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/quynguyen/${artifactId}.git</developerConnection>
     </scm>
-
     <properties>
         <maven.compiler.source>1.5</maven.compiler.source>
         <maven.compiler.target>1.5</maven.compiler.target>
         <encoding>UTF-8</encoding>
-        <scala.version>2.9.0.RC1</scala.version>
-        <specs.version>2.8.1</specs.version>
+        <scala.version>2.9.2</scala.version>
+        <specs.version>2.9.2</specs.version>
     </properties>
-
     <repositories>
+        <repository>
+            <id>oss.sonatype.org-releases</id>
+            <name>releases</name>
+            <url>http://oss.sonatype.org/content/repositories/releases</url>
+        </repository>
+        <repository>
+            <id>oss.sonatype.org-snapshots</id>
+            <name>snapshots</name>
+            <url>http://oss.sonatype.org/content/repositories/snapshots</url>
+        </repository>
         <repository>
             <id>scala-tools.org</id>
             <name>Scala-Tools Maven2 Repository</name>
@@ -46,7 +53,6 @@
             <url>https://whileloop-m2-repo.googlecode.com/svn/trunk/releases</url>
         </repository>
     </repositories>
-
     <pluginRepositories>
         <pluginRepository>
             <id>scala-tools.org</id>
@@ -54,7 +60,6 @@
             <url>http://scala-tools.org/repo-releases</url>
         </pluginRepository>
     </pluginRepositories>
-
     <dependencies>
         <dependency>
             <groupId>org.scala-lang</groupId>
@@ -69,9 +74,9 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.scala-tools.testing</groupId>
-            <artifactId>specs_${specs.version}</artifactId>
-            <version>1.6.7.2</version>
+            <groupId>org.specs2</groupId>
+            <artifactId>specs2_${specs.version}</artifactId>
+            <version>1.12.1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -81,7 +86,6 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
     <build>
         <pluginManagement>
             <plugins>
@@ -99,14 +103,11 @@
         </pluginManagement>
         <sourceDirectory>src/main/scala</sourceDirectory>
         <testSourceDirectory>src/test/scala</testSourceDirectory>
-
         <plugins>
-
             <plugin>
                 <groupId>org.scala-tools</groupId>
                 <artifactId>maven-scala-plugin</artifactId>
                 <executions>
-
                     <execution>
                         <goals>
                             <goal>compile</goal>
@@ -120,7 +121,6 @@
                             </args>
                         </configuration>
                     </execution>
-
                     <execution>
                         <id>scala-compile-first</id>
                         <phase>process-resources</phase>
@@ -129,7 +129,6 @@
                             <goal>compile</goal>
                         </goals>
                     </execution>
-
                     <execution>
                         <id>scala-test-compile</id>
                         <phase>process-test-resources</phase>
@@ -139,7 +138,6 @@
                     </execution>
                 </executions>
             </plugin>
-
             <plugin>
                 <artifactId>maven-eclipse-plugin</artifactId>
                 <configuration>
@@ -158,7 +156,6 @@
                     </classpathContainers>
                 </configuration>
             </plugin>
-
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>build-helper-maven-plugin</artifactId>
@@ -189,7 +186,6 @@
                     </execution>
                 </executions>
             </plugin>
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -202,7 +198,6 @@
                     </execution>
                 </executions>
             </plugin>
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
