--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>ca.whileloop</groupId>
     <artifactId>scala-pom</artifactId>
-    <version>2.9.2-SNAPSHOT</version>
+    <version>2.9.2</version>
     <packaging>pom</packaging>
     <name>${project.artifactId}</name>
     <description>A pom for scala projects.</description>
