--- a/pom.xml
+++ b/pom.xml
@@ -139,7 +139,9 @@
                 </executions>
             </plugin>
             <plugin>
+		<groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-eclipse-plugin</artifactId>
+		<version>2.9</version>
                 <configuration>
                     <sourceIncludes>
                         <sourceInclude>**/*.scala</sourceInclude>
@@ -159,6 +161,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>build-helper-maven-plugin</artifactId>
+		<version>1.8</version>
                 <executions>
                     <execution>
                         <id>add-source</id>
